<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.ActionsActivity"
    android:background="#333333">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/textViewIpInfo"
                android:textSize="18sp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="1,2,3"
            android:id="@+id/tableLayout"
            android:layout_weight="5">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal"
                android:layout_gravity="center" >

                <ImageButton
                    android:src="@drawable/key_arrow_up"
                    android:contentDescription="@string/move_forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonForward"
                    android:layout_column="2"
                    android:clickable="true"
                    android:longClickable="true"
                    android:background="#00ffffff"
                    android:layout_weight="0"
                    android:tag="=" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:src="@drawable/key_arrow_left"
                    android:contentDescription="@string/turn_left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonLeft"
                    android:layout_column="1"
                    android:background="#00ffffff"
                    android:longClickable="true"
                    android:clickable="true"
                    android:tag="&lt;" />

                <ImageButton
                    android:src="@drawable/key_arrow_right"
                    android:contentDescription="@string/turn_right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonRight"
                    android:layout_column="3"
                    android:background="#00ffffff"
                    android:longClickable="true"
                    android:clickable="true"
                    android:tag=">" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageButton
                    android:src="@drawable/key_arrow_down"
                    android:contentDescription="@string/move_backward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/buttonBackward"
                    android:layout_column="2"
                    android:background="#00ffffff"
                    android:clickable="true"
                    android:longClickable="true"
                    android:tag="\@" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"
                android:background="@drawable/button_bg_warning"
                android:id="@+id/buttonDisconnect"
                style="@style/AppPrimaryButton"
                android:onClick="disconnect" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>