<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundPrimary"
    tools:context=".activity.SetupActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layoutSetupBase"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_weight="5">

            <ImageView
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:src="@drawable/ic_launcher"
                android:contentDescription="@string/app_name"
                android:id="@+id/imageViewIcon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:layout_margin="20dp"
                android:textSize="30sp"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="4"
            android:gravity="center">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textFieldIp"
                android:hint="@string/ip_address"
                android:singleLine="true"
                android:background="@drawable/layout_bg_white"
                android:inputType="textNoSuggestions|number"
                style="@style/AppTextEntry" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/buttonConnect"
                android:layout_gravity="center_horizontal"
                android:hint="@string/connect"
                android:onClick="createTcpConnection"
                style="@style/AppPrimaryButton"
                android:layout_margin="10dp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="1"
            android:gravity="bottom|center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/copyright"
                android:id="@+id/textView" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>